--- a/index-2.html
+++ b/index-2.html
@@ -216,8 +216,8 @@
           <a href="#" class="fa fa-google-plus"></a>
           <a href="#" class="fa fa-pinterest"></a>
           </div>
-         <div class="copyright"><div class="color2"><strong>Arch</strong> &copy; <span id="copyright-year"></span> | <a href="#">Privacy Policy</a></div>
-          Website designed by <a href="http://www.templatemonster.com/" rel="nofollow">TemplateMonster.com</a>
+         <div class="copyright"><div class="color2"><strong>225mm</strong> &copy; <span id="copyright-year"></span> | <a href="#">Privacy Policy</a></div>
+          Website designed by <a href="http://www.priincetech.com/" rel="nofollow">Priince</a>
           </div>
       </div>
     </div>
