--- a/index-4.html
+++ b/index-4.html
@@ -92,7 +92,7 @@
 <!--=====================
           Content
 ======================-->
-<section class="content"><div class="ic">More Website Templates @ TemplateMonster.com - June 02, 2014!</div>
+<section class="content"><div class="ic"></div>
   <article class="content_bg1 pad__2">
     <div class="container">
       <div class="row">
@@ -102,26 +102,26 @@
             <div class="row">
               <div class="grid_9">
                 <figure class="">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d24214.807650104907!2d-73.94846048422478!3d40.65521573400813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1395650655094" style="border:0"></iframe>
+                <iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/search?q=bayo%20ajayi%20street%20agidingbi&key=AIzaSyDGKMZikEvX3ZWnEamfGuvUu7PYAr2UY1Q" allowfullscreen></iframe>
                 </figure>
               </div>
               <div class="grid_3">
                 <address class="address1">
                 <div class="text2 color3">Address:</div>
-                9870 St Vincent Place, <br>Glasgow, DC 45 Fr 45.
+                7 bayo ajayi street agidingbi, <br>Ikeja, Lagos.
                 <div class="clear"></div>
                 <div class="text2 color3">Phones:</div>
-                +1 800 559 6580 <br>+1 800 603 6035
+                +234 (0) 818 7669 902 <br>+234 (0) 803 4305 988
                 <div class="clear"></div>
                 <div class="text2 color3">Email:</div>
-                <a href="#">mail@demolink.org</a>
+                <a href="#">info@225mmconstructltd.com</a>
                 </address>
               </div>
             </div>
           </div>
           <div class="row">
             <div class="grid_9">
-              <p>24/7 support is on for all TemplateMonster’s <span class="color1"><a href="http://www.templatemonster.com/" rel="nofollow">premium themes</a></span>. Free templates go without it. <br> Need assistance in customization? Ask guys from <span class="color1"><a href="http://www.templatetuning.com/ " rel="nofollow">TemplateTuning</a></span>.</p>
+              
               Kas facilisis, nulla vel viverra auctor, leo magna sodales felis, quis malesuada nibh odio ut velitoin pharetra luctus diama scelerisque eros convallis accumsan. 
             </div>
           </div>
@@ -133,34 +133,34 @@
     <div class="row">
       <div class="grid_12">
         <h3>Contact Form</h3>
-        <form id="form">                              
+        <form id="form"  action="https://formspree.io/your@email.com" method="POST">              
         <div class="success_wrapper">
         <div class="success-message">Contact form submitted</div>
         </div>
         <label class="name">
-        <input type="text" placeholder="Name:" data-constraints="@Required @JustLetters" />
+        <input type="text" placeholder="Name:" data-constraints="@Required @JustLetters" name="name" />
         <span class="empty-message">*This field is required.</span>
         <span class="error-message">*This is not a valid name.</span>
         </label>                      
         <label class="email">
-        <input type="text" placeholder="E-mail:" data-constraints="@Required @Email" />
+        <input type="text" placeholder="E-mail:" data-constraints="@Required @Email" name="_replyto" />
         <span class="empty-message">*This field is required.</span>
         <span class="error-message">*This is not a valid email.</span>
         </label>
          <label class="phone">
-            <input type="text" placeholder="Phone:" data-constraints="@Required @JustNumbers"/>
+            <input type="text" placeholder="Phone:" data-constraints="@Required @JustNumbers" name="phone" />
             <span class="empty-message">*This field is required.</span>
             <span class="error-message">*This is not a valid phone.</span>
             </label>
         <label class="message">
-        <textarea placeholder="Message:" data-constraints='@Required @Length(min=20,max=999999)'></textarea>
+        <textarea placeholder="Message:" data-constraints='@Required @Length(min=20,max=999999)' name="message"></textarea>
         <span class="empty-message">*This field is required.</span>
         <span class="error-message">*The message is too short.</span>
         </label>
         <div>
         <div class="clear"></div>
         <div class="btns">
-        <a href="#" data-type="submit" class="btn">Submit</a></div>
+        <a href="#" data-type="submit" type="submit" value="Send" class="btn">Submit</a></div>
         </div>
         </form>   
       </div>
@@ -181,8 +181,8 @@
           <a href="#" class="fa fa-google-plus"></a>
           <a href="#" class="fa fa-pinterest"></a>
           </div>
-         <div class="copyright"><div class="color2"><strong>Arch</strong> &copy; <span id="copyright-year"></span> | <a href="#">Privacy Policy</a></div>
-          Website designed by <a href="http://www.templatemonster.com/" rel="nofollow">TemplateMonster.com</a>
+         <div class="copyright"><div class="color2"><strong>225mm</strong> &copy; <span id="copyright-year"></span> | <a href="#">Privacy Policy</a></div>
+          Website designed by <a href="http://www.priincetech.com/" rel="nofollow">Priince</a>
           </div>
       </div>
     </div>
