--- a/index.html
+++ b/index.html
@@ -108,7 +108,6 @@
         <div class="container">
             <div class="center wow fadeInDown">
                 <h2>Recent Works</h2>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> et dolore magna aliqua. Ut enim ad minim veniam</p>
             </div>
 
             <div class="row">
@@ -263,15 +262,24 @@
                                      </div>
 
                                      <div class="tab-pane fade" id="tab3">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</p>
+                                        <p>
+                                            In business and economics, innovation can be a catalyst to growth. With rapid advancements in transportation and communications over the past few decades, the old world concepts of factor endowments and comparative advantage which focused on an area’s unique inputs are outmoded for today’s global economy. Economist Joseph Schumpeter, who contributed greatly to the study of innovation economics, argued that industries must incessantly revolutionize the economic structure from within, that is innovate with better or more effective processes and products, as well as market distribution, such as the connection from the craft shop to factory. He famously asserted that "creative destruction is the essential fact about capitalism" In addition, entrepreneurs continuously look for better ways to satisfy their consumer base with improved quality, durability, service, and price which come to fruition in innovation with advanced technologies and organizational strategies
+                                        </p>
                                      </div>
                                      
                                      <div class="tab-pane fade" id="tab4">
-                                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words</p>
+                                        <p>
+                                            We believe in partnering with you to create an integrated construction effort.  You’ll get the benefits of a team that listens.  A team that is creative and experienced.  And a team that uses the latest innovative technology tools to ensure your construction site performs.
+                                        </p>
                                      </div>
 
                                      <div class="tab-pane fade" id="tab5">
-                                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures,</p>
+                                        <p>
+                                            What we do daily in our office and on the job site is to coordinate, construct, and supervise your building project.
+Most importantly, we build peace of mind for you.
+In short, the building path of your project has to be carefully planned and involves many players. Although changes in the plan may factor into the process, they will not affect the communication and coordination necessary to obtain the desired results.
+Whether you need a residential remodel, commercial build-out or construction from the ground up, 225mm Construction has the proven knowledge and experience to meet your building needs.
+                                        </p>
                                      </div>
                                 </div> <!--/.tab-content-->  
                             </div> <!--/.media-body--> 
