--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 
                                      <div class="tab-pane fade" id="tab3">
                                         <p>
-                                            In business and economics, innovation can be a catalyst to growth. With rapid advancements in transportation and communications over the past few decades, the old world concepts of factor endowments and comparative advantage which focused on an area’s unique inputs are outmoded for today’s global economy. Economist Joseph Schumpeter, who contributed greatly to the study of innovation economics, argued that industries must incessantly revolutionize the economic structure from within, that is innovate with better or more effective processes and products, as well as market distribution, such as the connection from the craft shop to factory. He famously asserted that "creative destruction is the essential fact about capitalism" In addition, entrepreneurs continuously look for better ways to satisfy their consumer base with improved quality, durability, service, and price which come to fruition in innovation with advanced technologies and organizational strategies
+                                            In business, innovation can be a catalyst to growth. With rapid advancements in transportation and communications over the past few decades, the old world concepts of factor endowments and comparative advantage which focused on an area’s unique inputs are outmoded for today’s global economy. Economist Joseph Schumpeter, who contributed greatly to the study of innovation economics, argued that industries must incessantly revolutionize the economic structure from within, that is innovate with better or more effective processes and products, as well as market distribution, such as the connection from the craft shop to factory. He famously asserted that "creative destruction is the essential fact about capitalism" In addition, entrepreneurs continuously look for better ways to satisfy their consumer base with improved quality, durability, service, and price which come to fruition in innovation with advanced technologies and organizational strategies
                                         </p>
                                      </div>
                                      
@@ -295,18 +295,8 @@ Whether you need a residential remodel, commercial build-out or construction fro
                                 <img class="img-responsive img-circle" src="images/testimonials1.png">
                             </div>
                             <div class="media-body">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
-                                <span><strong>-John Doe/</strong> Director of corlate.com</span>
-                            </div>
-                         </div>
-
-                         <div class="media testimonial-inner">
-                            <div class="pull-left">
-                                <img class="img-responsive img-circle" src="images/testimonials1.png">
-                            </div>
-                            <div class="media-body">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
-                                <span><strong>-John Doe/</strong> Director of corlate.com</span>
+                                <p>I am proud of the thoughtfulness, commitment and quality of work 225mm Construct has demonstrated through the design, construction and commissioning of our production facility. Teamwork is critical to any project; the teams worked well together to achieve a first-class production facility.</p>
+                                <span><strong>-Joey Anela </strong> Owner Benny Hotel</span>
                             </div>
                          </div>
 
@@ -321,7 +311,6 @@ Whether you need a residential remodel, commercial build-out or construction fro
         <div class="container">
             <div class="center wow fadeInDown">
                 <h2>We have worked with</h2>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> et dolore magna aliqua. Ut enim ad minim veniam</p>
             </div>    
 
             <div class="partners">
