--- a/whatwedo.html
+++ b/whatwedo.html
@@ -75,7 +75,6 @@
     <section id="blog" class="container">
         <div class="center">
             <h2>225mm Construct</h2>
-            <p class="lead">Pellentesque habitant morbi tristique senectus et netus et malesuada</p>
         </div>
 
         <div class="blog">
@@ -85,8 +84,8 @@
                         <div class="row">
                             <div class="col-xs-12 col-sm-10 blog-content">
                                 <a href="#"><img class="img-responsive img-blog" src="images/blog/bgimg5.png" width="100%" alt="" /></a>
-                                <h2><a href="blog-item.html">Oil & Gas</a></h2>
-                                <h3>Curabitur quis libero leo, pharetra mattis eros. Praesent consequat libero eget dolor convallis vel rhoncus magna scelerisque. Donec nisl ante, elementum eget posuere a, consectetur a metus. Proin a adipiscing sapien. Suspendisse vehicula porta lectus vel semper. Nullam sapien elit, lacinia eu tristique non.posuere at mi. Morbi at turpis id urna ullamcorper ullamcorper.</h3>
+                                <h2><a href="blog-item.html">Construction</a></h2>
+                                <h3>Large-scale construction requires collaboration across multiple disciplines. An architect normally manages the job, and a construction manager, design engineer, construction engineer or project manager supervises it. For the successful execution of a project, effective planning is essential. Those involved with the design and execution of the infrastructure in question must consider zoning requirements, the environmental impact of the job, the successful scheduling, budgeting, construction-site safety, availability and transportation of building materials, logistics, inconvenience to the public caused by construction delays and bidding, etc. The largest construction projects are referred to as megaprojects.</h3>
                                 <a class="btn btn-primary readmore" href="blog-item.html">Read More <i class="fa fa-angle-right"></i></a>
                             </div>
                         </div>    
@@ -94,9 +93,9 @@
                     <div class="blog-item">
                         <div class="row">
                             <div class="col-sm-10 blog-content">
-                                <a href=""><img class="img-responsive img-blog" src="images/blog/final3.jpg" width="100%" alt="" /></a>
-                                <h2><a href="blog-item.html">Consequat bibendum quam liquam viverra</a></h2>
-                                <h3>Curabitur quis libero leo, pharetra mattis eros. Praesent consequat libero eget dolor convallis vel rhoncus magna scelerisque. Donec nisl ante, elementum eget posuere a, consectetur a metus. Proin a adipiscing sapien. Suspendisse vehicula porta lectus vel semper. Nullam sapien elit, lacinia eu tristique non.posuere at mi. Morbi at turpis id urna ullamcorper ullamcorper.</h3>
+                                <a href=""><img class="img-responsive img-blog" src="images/blog/construct.jpg" width="100%" alt="" /></a>
+                                <h2><a href="blog-item.html">Engineering</a></h2>
+                                <h3>The discipline of Engineering is extremely broad and encompasses a range of more specialized fields of engineering, each with a more specific emphasis on particular areas of applied science, technology and types of application. </h3>
                                 <a class="btn btn-primary readmore" href="blog-item.html">Read More <i class="fa fa-angle-right"></i></a>
                             </div>
                         </div>    
@@ -104,9 +103,43 @@
                     <div class="blog-item">
                         <div class="row">
                             <div class="col-sm-10 blog-content">
-                                <a href=""><img class="img-responsive img-blog" src="images/blog/construct.jpg" width="100%" alt="" /></a>
+                                <a href=""><img class="img-responsive img-blog" src="images/realestate.jpg" width="100%" alt="" /></a>
+                                <h2><a href="blog-item.html">Real Estate</a></h2>
+                                <h3>Real Estate is property consisting of land and buildings on it, along with natural resources such as crops, minerals or water. Immovable objects of this nature an interest vested in this also an item of real propertym, more generally buildings or housing in general. Also the business of real estate, the profession of buying, selling and renting land, buildings or housing.</h3>
+                                <a class="btn btn-primary readmore" href="blog-item.html">Read More <i class="fa fa-angle-right"></i></a>
+                            </div>
+                        </div>    
+                    </div><!--/.blog-item-->
+                    <div class="blog-item">
+                        <div class="row">
+                            <div class="col-sm-10 blog-content">
+                                <a href=""><img class="img-responsive img-blog" src="images/oilgas.jpg" width="100%" alt="" /></a>
                                 <h2><a href="blog-item.html">Oil & Gas</a></h2>
-                                <h3>Curabitur quis libero leo, pharetra mattis eros. Praesent consequat libero eget dolor convallis vel rhoncus magna scelerisque. Donec nisl ante, elementum eget posuere a, consectetur a metus. Proin a adipiscing sapien. Suspendisse vehicula porta lectus vel semper. Nullam sapien elit, lacinia eu tristique non.posuere at mi. Morbi at turpis id urna ullamcorper ullamcorper.</h3>
+                                <h3>The guidance is divided into three parts:
+Part 1 on general design and constructional
+matters; Part 2 on operational and maintenance
+activities; and Part 3 on the specialised design,
+constructional and testing features for electrical
+installations at petrol filling stations. All three Parts
+set safety standards and practices for consistent
+application. They do not preclude the
+use of alternative designs, materials or methods
+where that use provides equivalent or higher
+standards of safety. Each case should be
+considered on its merits. Any variations which
+appear to be necessary because of special
+circumstances or developments in technology
+should be agreed with the licensing authority.</h3>
+                                <a class="btn btn-primary readmore" href="blog-item.html">Read More <i class="fa fa-angle-right"></i></a>
+                            </div>
+                        </div>    
+                    </div><!--/.blog-item-->
+                    <div class="blog-item">
+                        <div class="row">
+                            <div class="col-sm-10 blog-content">
+                                <a href=""><img class="img-responsive img-blog" src="images/renovation.jpg" width="100%" alt="" /></a>
+                                <h2><a href="blog-item.html">Renovation</a></h2>
+                                <h3>With renovation-themed shows dominating the prime-time television landscape, and a cultural focus on DIY jobs, many Nigerians eventually accumulate enough inspiration to take the sledgehammer to their own castle walls. Far from being an enjoyable weekend project, renovating can be a prolonged, complicated and expensive headache. If your preparation and budgeting is inadequate, you can run into serious trouble financially, and your renovation will suffer accordingly. Careful forethought and planning won’t necessarily eliminate all of your predicaments, but it can keep them to a minimum. Knowing how to navigate the often-complex requirements of local councils and their building permit processes can save you time and frustration.</h3>
                                 <a class="btn btn-primary readmore" href="blog-item.html">Read More <i class="fa fa-angle-right"></i></a>
                             </div>
                         </div>    
