--- a/contact-us.html
+++ b/contact-us.html
@@ -109,7 +109,7 @@
             </div> 
             <div class="row contact-wrap"> 
                 <div class="status alert alert-success" style="display: none"></div>
-                <form id="main-contact-form" class="contact-form" action="https://formspree.io/info@225mmconstructltd.com" method="POST">
+                <form class="contact-form" action="https://formspree.io/info@225mmconstructltd.com" method="POST">
                     <div class="col-sm-5 col-sm-offset-1">
                         <div class="form-group">
                             <label>Name *</label>
@@ -138,7 +138,7 @@
                             <textarea name="message" id="message" required="required" class="form-control" rows="8"></textarea>
                         </div>                        
                         <div class="form-group">
-                            <button type="submit" value="Send" class="btn btn-primary btn-lg" required="required">Submit Message</button>
+                            <input type="submit" value="Send" class="btn btn-primary btn-lg" required="required"/>
                         </div>
                     </div>
                 </form> 
