--- a/about-us.html
+++ b/about-us.html
@@ -32,7 +32,7 @@
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                                 <li><a href="#"><i class="fa fa-linkedin"></i></a></li> 
-                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                                <li><a href="https://www.instagram.com/225mmconstructltd/"><i class="fa fa-instagram"></i></a></li>
                             </ul>
                             <div class="search">
                                 <form role="form">
