--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                                 <li><a href="#"><i class="fa fa-linkedin"></i></a></li> 
-                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                                <li><a href="https://www.instagram.com/225mmconstructltd/"><i class="fa fa-instagram"></i></a></li>
                             </ul>
                             <div class="search">
                                 <form role="form">
@@ -68,7 +68,7 @@
         
     </header><!--/header-->
 
-    <video autoplay="true" loop style="width: 100%; height: 500px; margin-top:30px">
+    <video muted autoplay="true" loop style="width: 100%; height: 500px; margin-top:30px">
         <source src="images/video1.mp4" type="video/mp4">
     </video>
 
@@ -93,8 +93,8 @@
                             <img class="img-responsive" src="images/portfolio/recent/item1.jpg" alt="">
                             <div class="overlay">
                                 <div class="recent-work-inner">
-                                    <h3><a href="#">Construction</a></h3>
-                                    <a class="preview" href="images/portfolio/full/item1.png" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
+                                    <h3><a href="https://www.instagram.com/225mmconstructltd/">Construction</a></h3>
+                                    <a class="preview" href="images/portfolio/recent/item1.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
                                 </div> 
                             </div>
                         </div>
@@ -105,7 +105,7 @@
                             <img class="img-responsive" src="images/portfolio/recent/item2.jpg" alt="">
                             <div class="overlay">
                                 <div class="recent-work-inner">
-                                    <h3><a href="#">Construction</a></h3>
+                                    <h3><a href="https://www.instagram.com/225mmconstructltd/">Construction</a></h3>
                                     <a class="preview" href="images/portfolio/full/item2.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
                                 </div> 
                             </div>
@@ -117,7 +117,7 @@
                             <img class="img-responsive" src="images/portfolio/recent/item3.jpg" alt="">
                             <div class="overlay">
                                 <div class="recent-work-inner">
-                                    <h3><a href="#">Construction</a></h3>
+                                    <h3><a href="https://www.instagram.com/225mmconstructltd/">Construction</a></h3>
                                     <a class="preview" href="images/portfolio/full/item3.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
                                 </div> 
                             </div>
@@ -129,7 +129,7 @@
                             <img class="img-responsive" src="images/portfolio/recent/item4.jpg" alt="">
                             <div class="overlay">
                                 <div class="recent-work-inner">
-                                    <h3><a href="#">Construction</a></h3>
+                                    <h3><a href="https://www.instagram.com/225mmconstructltd/">Construction</a></h3>
                                     <a class="preview" href="images/portfolio/full/item4.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
                                 </div> 
                             </div>
@@ -141,7 +141,7 @@
                             <img class="img-responsive" src="images/portfolio/recent/item5.jpg" alt="">
                             <div class="overlay">
                                 <div class="recent-work-inner">
-                                    <h3><a href="#">Construction</a></h3>
+                                    <h3><a href="https://www.instagram.com/225mmconstructltd/">Construction</a></h3>
                                     <a class="preview" href="images/portfolio/full/item5.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
                                 </div> 
                             </div>
@@ -153,7 +153,7 @@
                             <img class="img-responsive" src="images/portfolio/recent/item6.jpg" alt="">
                             <div class="overlay">
                                 <div class="recent-work-inner">
-                                    <h3><a href="#">Construction</a></h3>
+                                    <h3><a href="https://www.instagram.com/225mmconstructltd/">Construction</a></h3>
                                     <a class="preview" href="images/portfolio/full/item6.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
                                 </div> 
                             </div>
@@ -165,7 +165,7 @@
                             <img class="img-responsive" src="images/portfolio/recent/item7.jpg" alt="">
                             <div class="overlay">
                                 <div class="recent-work-inner">
-                                    <h3><a href="#">Construction</a></h3>
+                                    <h3><a href="https://www.instagram.com/225mmconstructltd/">Construction</a></h3>
                                     <a class="preview" href="images/portfolio/full/item7.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
                                 </div> 
                             </div>
@@ -177,7 +177,7 @@
                             <img class="img-responsive" src="images/portfolio/recent/item8.jpg" alt="">
                             <div class="overlay">
                                 <div class="recent-work-inner">
-                                    <h3><a href="#">Construction</a></h3>
+                                    <h3><a href="https://www.instagram.com/225mmconstructltd/">Construction</a></h3>
                                     <a class="preview" href="images/portfolio/full/item8.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
                                 </div> 
                             </div>
@@ -192,7 +192,7 @@
                             <img class="img-responsive" src="images/img1.jpg" alt="">
                             <div class="overlay">
                                 <div class="recent-work-inner">
-                                    <h3><a href="#">Construction</a></h3>
+                                    <h3><a href="https://www.instagram.com/225mmconstructltd/">Construction</a></h3>
                                     <a class="preview" href="images/img1.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
                                 </div> 
                             </div>
@@ -204,7 +204,7 @@
                             <img class="img-responsive" src="images/img2.jpg" alt="">
                             <div class="overlay">
                                 <div class="recent-work-inner">
-                                    <h3><a href="#">Construction</a></h3>
+                                    <h3><a href="https://www.instagram.com/225mmconstructltd/">Construction</a></h3>
                                     <a class="preview" href="images/img2.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
                                 </div> 
                             </div>
@@ -216,7 +216,7 @@
                             <img class="img-responsive" src="images/img3.jpg" alt="">
                             <div class="overlay">
                                 <div class="recent-work-inner">
-                                    <h3><a href="#">Construction</a></h3>
+                                    <h3><a href="https://www.instagram.com/225mmconstructltd/">Construction</a></h3>
                                     <a class="preview" href="images/img3.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
                                 </div> 
                             </div>
@@ -228,7 +228,7 @@
                             <img class="img-responsive" src="images/img8.jpg" alt="">
                             <div class="overlay">
                                 <div class="recent-work-inner">
-                                    <h3><a href="#">Construction</a></h3>
+                                    <h3><a href="https://www.instagram.com/225mmconstructltd/">Construction</a></h3>
                                     <a class="preview" href="images/img8.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
                                 </div> 
                             </div>
@@ -240,7 +240,7 @@
                             <img class="img-responsive" src="images/img14.jpg" alt="">
                             <div class="overlay">
                                 <div class="recent-work-inner">
-                                    <h3><a href="#">Construction</a></h3>
+                                    <h3><a href="https://www.instagram.com/225mmconstructltd/">Construction</a></h3>
                                     <a class="preview" href="images/img14.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
                                 </div> 
                             </div>
@@ -252,7 +252,7 @@
                             <img class="img-responsive" src="images/img10.jpg" alt="">
                             <div class="overlay">
                                 <div class="recent-work-inner">
-                                    <h3><a href="#">Construction</a></h3>
+                                    <h3><a href="https://www.instagram.com/225mmconstructltd/">Construction</a></h3>
                                     <a class="preview" href="images/img10.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
                                 </div> 
                             </div>
@@ -264,7 +264,7 @@
                             <img class="img-responsive" src="images/img11.jpg" alt="">
                             <div class="overlay">
                                 <div class="recent-work-inner">
-                                    <h3><a href="#">Construction</a></h3>
+                                    <h3><a href="https://www.instagram.com/225mmconstructltd/">Construction</a></h3>
                                     <a class="preview" href="images/img11.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
                                 </div> 
                             </div>
@@ -276,7 +276,7 @@
                             <img class="img-responsive" src="images/img12.jpg" alt="">
                             <div class="overlay">
                                 <div class="recent-work-inner">
-                                    <h3><a href="#">Construction</a></h3>
+                                    <h3><a href="https://www.instagram.com/225mmconstructltd/">Construction</a></h3>
                                     <a class="preview" href="images/img12.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
                                 </div> 
                             </div>
@@ -291,7 +291,7 @@
                             <img class="img-responsive" src="images/img5.jpg" alt="">
                             <div class="overlay">
                                 <div class="recent-work-inner">
-                                    <h3><a href="#">Construction</a></h3>
+                                    <h3><a href="https://www.instagram.com/225mmconstructltd/">Construction</a></h3>
                                     <a class="preview" href="images/img5.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
                                 </div> 
                             </div>
@@ -303,7 +303,7 @@
                             <img class="img-responsive" src="images/img13.jpg" alt="">
                             <div class="overlay">
                                 <div class="recent-work-inner">
-                                    <h3><a href="#">Construction</a></h3>
+                                    <h3><a href="https://www.instagram.com/225mmconstructltd/">Construction</a></h3>
                                     <a class="preview" href="images/img13.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
                                 </div> 
                             </div>
@@ -315,7 +315,7 @@
                             <img class="img-responsive" src="images/img7.jpg" alt="">
                             <div class="overlay">
                                 <div class="recent-work-inner">
-                                    <h3><a href="#">Construction</a></h3>
+                                    <h3><a href="https://www.instagram.com/225mmconstructltd/">Construction</a></h3>
                                     <a class="preview" href="images/img7.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
                                 </div> 
                             </div>
@@ -327,7 +327,7 @@
                             <img class="img-responsive" src="images/img4.jpg" alt="">
                             <div class="overlay">
                                 <div class="recent-work-inner">
-                                    <h3><a href="#">Construction</a></h3>
+                                    <h3><a href="https://www.instagram.com/225mmconstructltd/">Construction</a></h3>
                                     <a class="preview" href="images/img4.jpg" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
                                 </div> 
                             </div>
