--- a/about-us.html
+++ b/about-us.html
@@ -174,13 +174,12 @@
                     <div class="widget">
                         <h3>Company</h3>
                         <ul>
-                            <li><a href="#">About us</a></li>
-                            <li><a href="#">We are hiring</a></li>
-                            <li><a href="#">Meet the team</a></li>
-                            <li><a href="#">Copyright</a></li>
-                            <li><a href="#">Terms of use</a></li>
-                            <li><a href="#">Privacy policy</a></li>
-                            <li><a href="#">Contact us</a></li>
+                            <li><a href="about-us.html">About us</a></li>
+                            <li><a href="jobs.html">We are hiring</a></li>
+                            <li><a href="whatwedo.html">What we do</a></li>
+                            <li><a href="team.html">The Team</a></li>
+                            <li><a href="privacy-policy.html">Privacy policy</a></li>
+                            <li><a href="contact-us.html">Contact us</a></li>
                         </ul>
                     </div>    
                 </div><!--/.col-md-3-->
@@ -190,12 +189,11 @@
                         <h3>Support</h3>
                         <ul>
                             <li><a href="#">Faq</a></li>
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Forum</a></li>
-                            <li><a href="#">Documentation</a></li>
+                            <li><a href="blog-item.html">Blog</a></li>
+                            <li><a href="terms.html">Terms of use</a></li>
                             <li><a href="#">Refund policy</a></li>
-                            <li><a href="#">Ticket system</a></li>
-                            <li><a href="#">Billing system</a></li>
+                            <li><a href="legal-advisor.html">Legal Advisor</a></li>
+                            <li><a href="bank.html">Bank</a></li>
                         </ul>
                     </div>    
                 </div><!--/.col-md-3-->
