--- a/bank.html
+++ b/bank.html
@@ -74,43 +74,24 @@
     <section>
         <div class="container">
             <div class="center wow fadeInDown">
-                <h2>Privacy Policy</h2>
+                <h2>Banks</h2>
             </div>
-            <p>
-                    This privacy policy sets out how 225mm Construct Ltd uses and protects any information that you give 225mm Construct when you use this website.
-                </p>
-                <p>225mm Construct Ltd is committed to ensuring that your privacy is protected. Should we ask you to provide certain information by which you can be identified when using this website, then you can be assured that it will only be used in accordance with this privacy statement.</p>
-                <p>225mm Construct Ltd may change this policy from time to time by updating this page. You should check this page from time to time to ensure that you are happy with any changes. This policy is effective from [date].</p>
-                <p>
-                    <b>What we collect</b>
-                    <p>
-                        We may collect the following information:
-                        <ul>
-                            <li>name and job title</li>
-                            <li>contact information including email address</li>
-                            <li>demographic information such as postcode, preferences and interests</li>
-                            <li>other information relevant to customer surveys and/or offers</li>
-                        </ul>
-                    </p>
-                </p>
-                <p>
-                    <b>What we do with the information we gather</b>
-                    <p>We require this information to understand your needs and provide you with a better service, and in particular for the following reasons:</p>
-                    <p>
-                        <ul>
-                            <li>Internal record keeping.</li>
-                            <li>We may use the information to improve our products and services.</li>
-                            <li>We may periodically send promotional emails about new products, special offers or other information which we think you may find interesting using the email address which you have provided.</li>
-                            <li>From time to time, we may also use your information to contact you for market research purposes. We may contact you by email, phone, fax or mail. We may use the information to customize the website according to your interests.</li>
-                        </ul>
-                    </p>
-                    <p>
-                        <b>Security</b>
-                        <p>
-                            We are committed to ensuring that your information is secure. In order to prevent unauthorized access or disclosure, we have put in place suitable physical, electronic and managerial procedures to safeguard and secure the information we collect online.
-                        </p>
-                    </p>
-                </p>
+            <div class="col-md-6 col-md-offset-3">
+            <h2>
+            	ZENITH BANK PLC <br>
+            	220 AWOLOWO ROAD, FALOMO, IKOYI LAGOS. <br>
+            	01-2710605, 2710606, FAX 01-4630795 <br>
+            	ENQUIRY@ZENITHBANK.COM <br>
+            	WWW.ZENITHBANK.COM <br><br>
+
+            	GT BANK <br>
+            	6 ADEYEMO ALAKIJA STREET, VICTORIA ISLAND <br><br>
+
+            	ACCESS BANK <br>
+            	ALAUSA IKEJA BRANCH, LAGOS
+            </h2>
+            </div>
+            
         </div>
     </section>
 
