--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ Whether you need a residential remodel, commercial build-out or construction fro
                             <li><a href="about-us.html">About us</a></li>
                             <li><a href="jobs.html">We are hiring</a></li>
                             <li><a href="whatwedo.html">What we do</a></li>
-                            <li><a href="terms.html">Terms of use</a></li>
+                            <li><a href="team.html">The Team</a></li>
                             <li><a href="privacy-policy.html">Privacy policy</a></li>
                             <li><a href="contact-us.html">Contact us</a></li>
                         </ul>
@@ -348,10 +348,10 @@ Whether you need a residential remodel, commercial build-out or construction fro
                         <ul>
                             <li><a href="#">Faq</a></li>
                             <li><a href="blog-item.html">Blog</a></li>
-                            <li><a href="#">Documentation</a></li>
+                            <li><a href="terms.html">Terms of use</a></li>
                             <li><a href="#">Refund policy</a></li>
-                            <li><a href="#">Ticket system</a></li>
-                            <li><a href="#">Billing system</a></li>
+                            <li><a href="legal-advisor.html">Legal Advisor</a></li>
+                            <li><a href="bank.html">Bank</a></li>
                         </ul>
                     </div>    
                 </div><!--/.col-md-3-->
