--- a/about-us.html
+++ b/about-us.html
@@ -220,7 +220,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    &copy; 2016 <a target="_blank" href="http://shapebootstrap.net/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">225mm Construct LTD</a>. All Rights Reserved.
+                    &copy; 2016 <a target="_blank" href="http://shapebootstrap.net/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">225mm Construct LTD</a>. All Rights Reserved |
+                    Design by <a href="http://priincetech.com/index.html">Priince</a></p>
                 </div>
                 <div class="col-sm-6">
                     <ul class="pull-right">
