--- a/services.html
+++ b/services.html
@@ -189,7 +189,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    &copy; 2013 <a target="_blank" href="http://shapebootstrap.net/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">ShapeBootstrap</a>. All Rights Reserved.
+                    &copy; 2013 <a target="_blank" href="http://shapebootstrap.net/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">ShapeBootstrap</a>. All Rights Reserved |
+                    Design by <a href="http://priincetech.com/index.html">Priince</a></p>
                 </div>
                 <div class="col-sm-6">
                     <ul class="pull-right">
