--- a/whatwedo.html
+++ b/whatwedo.html
@@ -63,6 +63,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about-us.html">Who we are</a></li>
                         <li class="active"><a href="whatwedo.html">What we do</a></li>
+                        <li><a href="projects.html">Projects</a></li>
                         <li><a href="portfolio.html">Gallery</a></li> 
                         <li><a href="contact-us.html">Contact</a></li>                        
                     </ul>
